--- a/remove.html
+++ b/remove.html
@@ -24,7 +24,7 @@
     <a href="#" style="margin-left: 2%; color: black;"> logout</a>
     <hr style="width: 80%;">
 
-    <h5 style="margin-left: 14%;">Video Basket </h5> 
+    <h5 style="margin-left: 14%;">Vido Basket </h5> 
     
     <table style=" border-collapse: collapse;
     width: 70%; margin-left: 15%;">
