--- a/remove.html
+++ b/remove.html
@@ -41,7 +41,7 @@
           <td>kedi(2016)</td>
           <td>12.99</td>
           <td>12.99</td>
-          <td><button style="background-color: green; ">Remove</button></td>
+          <td><button style="background-color: green; ">move</button></td>
         </tr>
         <tr style="text-align: center;">
           <td> </td>
